--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://charchar111.github.io/zt-common-component-storybook",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "storybook:deploy": "gh-pages -d storybook-static"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -32,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^9.0.8",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "playwright": "^1.53.0",
     "storybook": "^9.0.8",
