--- a/package.json
+++ b/package.json
@@ -15,7 +15,17 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@loadable/component": "^5.16.4",
+    "@types/loadable__component": "^5.13.9",
+    "@types/mime-types": "^2.1.4",
+    "file-type": "^19.6.0",
+    "mime": "^4.0.6",
+    "mime-db": "^1.53.0",
+    "mime-lite": "^1.0.3",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.2",
+    "sass-embedded": "^1.83.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
