--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "storybook:deploy": "gh-pages -d storybook-static"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "@loadable/component": "^5.16.4",
     "@types/loadable__component": "^5.13.9",
     "@types/mime-types": "^2.1.4",
     "file-type": "^19.6.0",
-    "mime": "^4.0.6",
-    "mime-db": "^1.53.0",
+    "mime": "^4.0.7",
+    "mime-db": "^1.54.0",
     "mime-lite": "^1.0.3",
-    "react-dropzone": "^14.3.5",
-    "react-hook-form": "^7.54.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.57.0",
     "sass-embedded": "^1.83.0"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "@storybook/addon-onboarding": "^9.0.8",
     "@storybook/addon-vitest": "^9.0.8",
     "@storybook/react-vite": "^9.0.8",
+    "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
