--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
-    "sass-embedded": "^1.83.0"
+    "sass-embedded": "^1.83.0",
+    "streamsaver": "^2.0.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
@@ -38,6 +39,7 @@
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/streamsaver": "^2.0.5",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/browser": "^3.2.3",
     "@vitest/coverage-v8": "^3.2.3",
