--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "storybook:deploy": "gh-pages -d storybook-static"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@loadable/component": "^5.16.4",
     "@types/loadable__component": "^5.13.9",
     "@types/mime-types": "^2.1.4",
@@ -21,12 +24,15 @@
     "mime": "^4.0.7",
     "mime-db": "^1.54.0",
     "mime-lite": "^1.0.3",
+    "re-resizable": "^6.11.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "sass-embedded": "^1.83.0",
-    "streamsaver": "^2.0.6"
+    "streamsaver": "^2.0.6",
+    "styled-components": "^6.1.19",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
