--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "storybook:deploy": "gh-pages -d storybook-static"
+    "storybook:deploy": "gh-pages -d storybook-static",
+    "resolveToken": "node ./design_tokens/resolveToken.mjs"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -42,6 +43,7 @@
     "@storybook/addon-onboarding": "^9.0.8",
     "@storybook/addon-vitest": "^9.0.8",
     "@storybook/react-vite": "^9.0.8",
+    "@tokens-studio/sd-transforms": "^2.0.0",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -57,6 +59,7 @@
     "globals": "^16.0.0",
     "playwright": "^1.53.0",
     "storybook": "^9.0.8",
+    "style-dictionary": "^5.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
