feat: [컴포넌트 추가] 파운데이션 - 스크립트 파이프 라인 추가 - 전처리 토큰을 ts로 변경(나중에 ts 타입 코드 부분 고도화 필요 할 수도)

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,8 +29,9 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@stories/*": ["src/stories/*"],
+      "@assets/*": ["src/assets/*"],
       "@public/*": ["public/*"],
-      "@assets/*": ["src/assets/*"]
+      "@designTokens/*": ["design_tokens/*"]
     }
   },
   "include": ["src"]
