--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@loadable/component": "^5.16.4",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "@mui/styled-engine-sc": "^7.1.1",
     "@types/loadable__component": "^5.13.9",
     "@types/mime-types": "^2.1.4",
     "file-type": "^19.6.0",
@@ -30,6 +35,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
+    "react-window": "^1.8.11",
     "sass-embedded": "^1.83.0",
     "streamsaver": "^2.0.6",
     "styled-components": "^6.1.19",
@@ -43,7 +49,7 @@
     "@storybook/addon-onboarding": "^9.0.8",
     "@storybook/addon-vitest": "^9.0.8",
     "@storybook/react-vite": "^9.0.8",
-    "@tokens-studio/sd-transforms": "^2.0.0",
+    "@tokens-studio/sd-transforms": "^1.3.0",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -59,7 +65,7 @@
     "globals": "^16.0.0",
     "playwright": "^1.53.0",
     "storybook": "^9.0.8",
-    "style-dictionary": "^5.0.0",
+    "style-dictionary": "^4.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
