모달 애니메이션 추가

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@mui/styled-engine-sc": "^7.1.1",
     "@types/loadable__component": "^5.13.9",
     "@types/mime-types": "^2.1.4",
+    "@types/styled-components": "^5.1.34",
     "file-type": "^19.6.0",
     "mime": "^4.0.7",
     "mime-db": "^1.54.0",
     "mime-lite": "^1.0.3",
+    "motion": "^12.18.1",
     "re-resizable": "^6.11.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
